--- a/TorchOptimizationsPlugin/TorchOptimizationsPlugin.csproj
+++ b/TorchOptimizationsPlugin/TorchOptimizationsPlugin.csproj
@@ -13,6 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <LangVersion>8</LangVersion>
     <Nullable>enable</Nullable>
+    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -40,6 +41,8 @@
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c">
       <HintPath>..\..\..\..\..\..\torch-server\NLog.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="Sandbox.Common, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\Sandbox.Common.dll</HintPath>
     </Reference>
@@ -52,6 +55,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="Torch, Version=1.3.1.123, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\..\..\..\..\..\torch-server\Torch.dll</HintPath>
@@ -77,13 +81,16 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\VRage.Network.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GasTankThrottle.cs" />
     <Compile Include="Plugin.cs" />
-    <Compile Include="ProductionThread.cs" />
+    <Compile Include="UserControl.xaml.cs">
+      <DependentUpon>UserControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResourceSinkPatch.cs" />
+    <Page Include="UserControl.xaml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
