--- a/n3bOptimizations/n3bOptimizations.csproj
+++ b/n3bOptimizations/n3bOptimizations.csproj
@@ -35,24 +35,30 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="0Harmony, Version=2.0.1.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\Downloads\harmony.2.0.1.0\Release\net48\0harmony.dll</HintPath>
-    </Reference>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c">
-      <HintPath>..\..\..\..\..\..\torch-server\NLog.dll</HintPath>
-    </Reference>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-    <Reference Include="Sandbox.Common, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\Sandbox.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Sandbox.Game, Version=0.1.1.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\Sandbox.Game.dll</HintPath>
-    </Reference>
-    <Reference Include="SpaceEngineers.ObjectBuilders, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\SpaceEngineers.ObjectBuilders.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
+      <Reference Include="0Harmony, Version=2.0.1.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\..\Downloads\harmony.2.0.1.0\Release\net48\0harmony.dll</HintPath>
+      </Reference>
+      <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c">
+          <HintPath>..\..\..\..\..\..\torch-server\NLog.dll</HintPath>
+      </Reference>
+      <Reference Include="PresentationCore"/>
+      <Reference Include="PresentationFramework"/>
+      <Reference Include="ProtoBuf.Net, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\ProtoBuf.Net.dll</HintPath>
+      </Reference>
+      <Reference Include="ProtoBuf.Net.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\ProtoBuf.Net.Core.dll</HintPath>
+      </Reference>
+      <Reference Include="Sandbox.Common, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\Sandbox.Common.dll</HintPath>
+      </Reference>
+      <Reference Include="Sandbox.Game, Version=0.1.1.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\Sandbox.Game.dll</HintPath>
+      </Reference>
+      <Reference Include="SpaceEngineers.ObjectBuilders, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\SpaceEngineers.ObjectBuilders.dll</HintPath>
+      </Reference>
+      <Reference Include="System"/>
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xaml" />
@@ -67,35 +73,42 @@
       <HintPath>..\..\..\..\..\..\torch-server\Torch.Server.exe</HintPath>
     </Reference>
     <Reference Include="VRage, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\VRage.dll</HintPath>
+        <SpecificVersion>False</SpecificVersion>
+        <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\VRage.dll</HintPath>
     </Reference>
-    <Reference Include="VRage.Game, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\VRage.Game.dll</HintPath>
-    </Reference>
-    <Reference Include="VRage.Library, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\VRage.Library.dll</HintPath>
-    </Reference>
-    <Reference Include="VRage.Network, Version=1.0.53.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\VRage.Network.dll</HintPath>
-    </Reference>
-    <Reference Include="WindowsBase" />
+      <Reference Include="VRage.Game, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+          <SpecificVersion>False</SpecificVersion>
+          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\VRage.Game.dll</HintPath>
+      </Reference>
+      <Reference Include="VRage.Library, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\VRage.Library.dll</HintPath>
+      </Reference>
+      <Reference Include="VRage.Math, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\VRage.Math.dll</HintPath>
+      </Reference>
+      <Reference Include="VRage.Network, Version=1.0.53.0, Culture=neutral, processorArchitecture=MSIL">
+          <SpecificVersion>False</SpecificVersion>
+          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\VRage.Network.dll</HintPath>
+      </Reference>
+      <Reference Include="WindowsBase"/>
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="GasTankThrottle.cs" />
-    <Compile Include="IPatch.cs" />
-    <Compile Include="Patch\Inventory\InventoryProps.cs" />
-    <Compile Include="Patch\Inventory\InventoryStorage.cs" />
-    <Compile Include="Patch\Inventory\Patch.cs" />
-    <Compile Include="Plugin.cs" />
-    <Compile Include="PluginControl.xaml.cs">
-      <DependentUpon>PluginControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Page Include="PluginControl.xaml" />
-  </ItemGroup>
+    <ItemGroup>
+        <Compile Include="GasTankThrottle.cs"/>
+        <Compile Include="IPatch.cs"/>
+        <Compile Include="Multiplayer\API.cs"/>
+        <Compile Include="Multiplayer\Contracts.cs"/>
+        <Compile Include="Patch\Inventory\MyClientStateBaseExtension.cs"/>
+        <Compile Include="Patch\Inventory\MyReplicationServerPatch.cs"/>
+        <Compile Include="Patch\Inventory\MyProductionBLockPatch.cs"/>
+        <Compile Include="Plugin.cs"/>
+        <Compile Include="PluginControl.xaml.cs">
+            <DependentUpon>PluginControl.xaml</DependentUpon>
+        </Compile>
+        <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="Test.cs"/>
+        <Compile Include="Util\ConcurrentHashSet.cs"/>
+        <Page Include="PluginControl.xaml"/>
+    </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
          Other similar extension points exist, see Microsoft.Common.targets.
