fix only part tanks were updated

--- a/n3bOptimizations/n3bOptimizations.csproj
+++ b/n3bOptimizations/n3bOptimizations.csproj
@@ -111,12 +111,15 @@
         <Compile Include="Util\ConcurrentHashSet.cs"/>
         <Page Include="PluginControl.xaml"/>
     </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-         Other similar extension points exist, see Microsoft.Common.targets.
-    <Target Name="BeforeBuild">
-    </Target>
-    <Target Name="AfterBuild">
-    </Target>
-    -->
+    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
+    <PropertyGroup>
+        <PostBuildEvent>copy /Y "$(TargetDir)$(TargetName).dll" "C:\torch-server\Plugins\$(TargetName).dll"</PostBuildEvent>
+    </PropertyGroup>
+    <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+           Other similar extension points exist, see Microsoft.Common.targets.
+      <Target Name="BeforeBuild">
+      </Target>
+      <Target Name="AfterBuild">
+      </Target>
+      -->
 </Project>
