--- a/n3bOptimizations/n3bOptimizations.csproj
+++ b/n3bOptimizations/n3bOptimizations.csproj
@@ -110,7 +110,7 @@
         <Compile Include="Properties\AssemblyInfo.cs"/>
         <Compile Include="Test.cs"/>
         <Compile Include="Util\ConcurrentHashSet.cs"/>
-        <Compile Include="Util\DebounceDispatcher.cs"/>
+        <Compile Include="Util\TimerUtil.cs"/>
         <Page Include="PluginControl.xaml"/>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
