--- a/n3bOptimizations/n3bOptimizations.csproj
+++ b/n3bOptimizations/n3bOptimizations.csproj
@@ -35,66 +35,60 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-      <Reference Include="0Harmony, Version=2.0.1.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\Downloads\harmony.2.0.1.0\Release\net48\0harmony.dll</HintPath>
+      <Reference Include="0Harmony, Version=2.0.4.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\0Harmony.dll</HintPath>
       </Reference>
       <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c">
-          <HintPath>..\..\..\..\..\..\torch-server\NLog.dll</HintPath>
+          <HintPath>..\..\..\torch-server\NLog.dll</HintPath>
       </Reference>
       <Reference Include="PresentationCore"/>
       <Reference Include="PresentationFramework"/>
       <Reference Include="ProtoBuf.Net, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\ProtoBuf.Net.dll</HintPath>
+          <HintPath>..\..\..\torch-server\DedicatedServer64\ProtoBuf.Net.dll</HintPath>
       </Reference>
       <Reference Include="ProtoBuf.Net.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\ProtoBuf.Net.Core.dll</HintPath>
+          <HintPath>..\..\..\torch-server\DedicatedServer64\ProtoBuf.Net.Core.dll</HintPath>
       </Reference>
       <Reference Include="Sandbox.Common, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\Sandbox.Common.dll</HintPath>
+          <HintPath>..\..\..\torch-server\DedicatedServer64\Sandbox.Common.dll</HintPath>
       </Reference>
       <Reference Include="Sandbox.Game, Version=0.1.1.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\Sandbox.Game.dll</HintPath>
+          <HintPath>..\..\..\torch-server\DedicatedServer64\Sandbox.Game.dll</HintPath>
       </Reference>
       <Reference Include="Sandbox.Graphics, Version=0.1.1.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SpaceEngineers\Bin64\Sandbox.Graphics.dll</HintPath>
+          <HintPath>C:\Program Files (x86)\Steam\steamapps\common\SpaceEngineers\Bin64\Sandbox.Graphics.dll</HintPath>
       </Reference>
       <Reference Include="SpaceEngineers.Game, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SpaceEngineers\Bin64\SpaceEngineers.Game.dll</HintPath>
+          <HintPath>C:\Program Files (x86)\Steam\steamapps\common\SpaceEngineers\Bin64\SpaceEngineers.Game.dll</HintPath>
       </Reference>
       <Reference Include="SpaceEngineers.ObjectBuilders, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\SpaceEngineers.ObjectBuilders.dll</HintPath>
+          <HintPath>..\..\..\torch-server\DedicatedServer64\SpaceEngineers.ObjectBuilders.dll</HintPath>
       </Reference>
       <Reference Include="System"/>
       <Reference Include="System.Core"/>
       <Reference Include="System.Data"/>
       <Reference Include="System.Xaml"/>
       <Reference Include="System.Xml"/>
-      <Reference Include="Torch, Version=1.3.1.123, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\..\..\torch-server\Torch.dll</HintPath>
+      <Reference Include="Torch, Version=1.3.1.136, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\torch-server\Torch.dll</HintPath>
       </Reference>
-      <Reference Include="Torch.API, Version=1.3.1.123, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\..\..\torch-server\Torch.API.dll</HintPath>
+      <Reference Include="Torch.API, Version=1.3.1.136, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\torch-server\Torch.API.dll</HintPath>
       </Reference>
-      <Reference Include="Torch.Server, Version=1.3.1.123, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\..\..\torch-server\Torch.Server.exe</HintPath>
+      <Reference Include="VRage, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\torch-server\DedicatedServer64\VRage.dll</HintPath>
       </Reference>
-      <Reference Include="VRage, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-        <SpecificVersion>False</SpecificVersion>
-        <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\VRage.dll</HintPath>
-    </Reference>
-      <Reference Include="VRage.Game, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-          <SpecificVersion>False</SpecificVersion>
-          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\VRage.Game.dll</HintPath>
+      <Reference Include="VRage.Game, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\torch-server\DedicatedServer64\VRage.Game.dll</HintPath>
       </Reference>
       <Reference Include="VRage.Library, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\VRage.Library.dll</HintPath>
+          <HintPath>..\..\..\torch-server\DedicatedServer64\VRage.Library.dll</HintPath>
       </Reference>
       <Reference Include="VRage.Math, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\VRage.Math.dll</HintPath>
+          <HintPath>..\..\..\torch-server\DedicatedServer64\VRage.Math.dll</HintPath>
       </Reference>
-      <Reference Include="VRage.Network, Version=1.0.53.0, Culture=neutral, processorArchitecture=MSIL">
-          <SpecificVersion>False</SpecificVersion>
-          <HintPath>..\..\..\..\..\..\torch-server\DedicatedServer64\VRage.Network.dll</HintPath>
+      <Reference Include="VRage.Network, Version=1.0.53.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\torch-server\DedicatedServer64\VRage.Network.dll</HintPath>
       </Reference>
       <Reference Include="WindowsBase"/>
   </ItemGroup>
@@ -131,7 +125,7 @@
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <PropertyGroup>
-        <PostBuildEvent>copy /Y "$(TargetDir)$(TargetName).dll" "C:\torch-server\Plugins\$(TargetName).dll"</PostBuildEvent>
+        <PostBuildEvent>copy /Y "$(TargetDir)$(TargetName).dll" "D:\torch-server\Plugins\$(TargetName).dll"</PostBuildEvent>
     </PropertyGroup>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
            Other similar extension points exist, see Microsoft.Common.targets.
